--- a/registro/styles.css
+++ b/registro/styles.css
@@ -15,7 +15,7 @@ body {
   width: 100%;
 }
 
-.header__img {
+.header img {
   margin-left: 30px;
   width: 200px;
 }
@@ -58,7 +58,7 @@ body {
   width: 40px;
 }
 
-.login {
+.register {
   background: linear-gradient(#005288, #A7A9AC);
   display: flex;
   align-items: center;
@@ -68,7 +68,7 @@ body {
   min-height: calc(100vh - 200px);
 }
 
-.login__container {
+.register__container {
   background-color: rgba(255, 255, 255, 0.1);
   border: 2px solid white;
   border-radius: 40px;
@@ -81,56 +81,56 @@ body {
   width: 300px;
 }
 
-.login__container--form {
+.register__container--form {
   display: flex;
   flex-direction: column;
 }
 
-.login__container--form label {
+.register__container--form label {
   font-size: 14px;
 }
 
-.login__container--remember-me {
+.register__container--remember-me {
   color: white;
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
 }
 
-.login__container--remember-me a {
+.register__container--remember-me a {
   color: white;
   font-size: 14px;
   text-decoration: none;
 }
 
-.login__container--remember-me a:hover {
+.register__container--remember-me a:hover {
   text-decoration: underline;
 }
 
-.login__container--social-media > div {
+.register__container--social-media > div {
   display: flex;
   align-items: center;
   font-size: 14px;
   margin-bottom: 10px;
 }
 
-.login__container--social-media > div > img {
+.register__container--social-media > div > img {
   width: 30px;
   margin-right: 10px;
 }
 
-.login__container--register {
+.register__container--register {
   font-size: 14px;
 }
 
-.login__container--register a {
+.register__container--register a {
   color: white;
   font-weight: bold;
   font-size: 16px;
   text-decoration: none;
 }
 
-.login__container--register a:hover {
+.register__container--register a:hover {
   text-decoration: underline;
 }
 
